--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,6 +16,7 @@
             <button routerLink="login">Login</button>
             <button routerLink="patients">Patients</button>
             <button routerLink="form">Forms</button>
+            <button routerLink="questionnaire01">Questionnaire01</button>
             <button routerLink="CapabilityStatement">CapabilityStatement</button>
             <button routerLink="settings">Settings</button>
             <button routerLink="">Search Service</button>
@@ -30,17 +31,12 @@
             <a mat-button routerLink="login">Login</a>
             <a mat-button routerLink="patients">Patients</a>
             <a routerLink="form">Forms</a>
+            <a routerLink="questionnaire01">Questionnaire01</a>
             <a mat-button routerLink="CapabilityStatement">CapabilityStatement</a>            
             <a mat-button routerLink="settings">Settings</a>            
             <a mat-button routerLink="">Search Patient</a>
 
     </mat-card>
- 
-            
-
- 
-
-
 
 </div>
 
