loginComponent and userComponent in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,56 +35,21 @@
         <span>Questionnaire01</span>
       </button>
 
-
       <button mat-menu-item routerLink="/user">
         <mat-icon>people</mat-icon>
-        <span>Search User</span>
-      </button>
-
-      <button mat-menu-item routerLink="/MenuMaterial">
-        <mat-icon>menu</mat-icon>
-      <span>MenuMaterial</span>
+        <span>User</span>
       </button>
 
       <button mat-menu-item routerLink="/CapabilityStatement">
         <mat-icon>info</mat-icon>
       <span>CapabilityStatement</span>
       </button>
-
-
-
-      <button mat-menu-item routerLink="/contact-form">
-        <mat-icon>settings</mat-icon>
-        <span>Kontaktformular</span>
-      </button>
-      <button mat-menu-item routerLink="/request-form">
-        <mat-icon>settings</mat-icon>
-        <span>Request</span>
-      </button>    
+    
       <button mat-menu-item routerLink="/settings">
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
       </button>
-      <button mat-menu-item routerLink="/dialog-demo">
-        <mat-icon>people</mat-icon>
-        <span>DialogDemo</span>
-      </button>
-      <button mat-menu-item routerLink="/menudemo">
-        <mat-icon>voicemail</mat-icon>
-        <span>MenuDemo</span>
-      </button>
-      <button mat-menu-item routerLink="/side-nav-demo">
-        <mat-icon>settings</mat-icon>
-        <span>SideNavDemo</span>
-      </button>
-      <button mat-menu-item routerLink="/toolbar-demo">
-        <mat-icon>settings</mat-icon>
-        <span>Toolbar Demo</span>
-      </button>
-      <button mat-menu-item routerLink="/usertable">
-        <mat-icon>people</mat-icon>
-        <span>Usertable Demo</span>
-      </button>
+
     </mat-menu>
   </span>
 </mat-toolbar>
