--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,14 +13,15 @@
 
     <mat-menu x-position="before" #menu="matMenu">
         <mat-toolbar-row>
-            <button routerLink="login">Login</button>
-            <button routerLink="patients">Patients</button>
-            <button routerLink="form">Forms</button>
-            <button routerLink="questionnaire01">Questionnaire01</button>
-            <button routerLink="CapabilityStatement">CapabilityStatement</button>
-            <button routerLink="settings">Settings</button>
-            <button routerLink="">Search Service</button>
-            <button routerLink="">Logout</button>                       
+            <button routerLink="login"> Login </button>
+            <button routerLink="patients"> Patients </button>
+            <button routerLink="user"> User </button>
+            <button routerLink="form"> Forms </button>
+            <button routerLink="questionnaire01"> Questionnaire01 </button>
+            <button routerLink="CapabilityStatement"> CapabilityStatement </button>
+            <button routerLink="settings"> Settings </button>
+            <button routerLink=""> Search Service </button>
+            <button routerLink=""> Logout </button>                       
 
         </mat-toolbar-row>               
     </mat-menu>
@@ -30,6 +31,7 @@
 
             <a mat-button routerLink="login">Login</a>
             <a mat-button routerLink="patients">Patients</a>
+            <a mat-button routerLink="user"> User </a>
             <a routerLink="form">Forms</a>
             <a routerLink="questionnaire01">Questionnaire01</a>
             <a mat-button routerLink="CapabilityStatement">CapabilityStatement</a>            
