--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -8,9 +8,9 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-card-actions>
-    <button routerLink="home">Home</button>
-  </mat-card-actions>
+  <button mat-menu-item routerLink="/">
+    <span>Home</span>
+  </button>
 </mat-card>
 
 
