--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,9 @@
     <span class="align-center"></span>
     <span class="example-spacer"></span>
   </mat-toolbar-row>
+  <button mat-menu-item routerLink="/">
+    <span>Home</span>
+  </button>
 </mat-toolbar>
   
 <mat-card class="example-card">
