new component questionnaire02

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
   <!-- This fills the remaining space of the current row -->
   <span class="example-fill-remaining-space"> </span>
   <span>
-    <button mat-icon-button [matMenuTriggerFor]="menu" >
+    <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
 
       <button mat-menu-item routerLink="/">
-          <mat-icon>home</mat-icon>
-          <span>Home</span>
+        <mat-icon>home</mat-icon>
+        <span>Home</span>
       </button>
 
       <button mat-menu-item routerLink="/login">
@@ -35,6 +35,11 @@
         <span>Questionnaire01</span>
       </button>
 
+      <button mat-menu-item routerLink="/questionnaire02">
+        <mat-icon>info</mat-icon>
+        <span>Questionnaire02</span>
+      </button>
+
       <button mat-menu-item routerLink="/user">
         <mat-icon>people</mat-icon>
         <span>User</span>
@@ -42,9 +47,9 @@
 
       <button mat-menu-item routerLink="/CapabilityStatement">
         <mat-icon>info</mat-icon>
-      <span>CapabilityStatement</span>
+        <span>CapabilityStatement</span>
       </button>
-    
+
       <button mat-menu-item routerLink="/settings">
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
@@ -54,16 +59,5 @@
   </span>
 </mat-toolbar>
 <div class="mat-typography">
-<router-outlet> </router-outlet>
+  <router-outlet> </router-outlet>
 </div>
-
-
-
-
-
-
-
-
-
-
-
