--- a/src/app/patients/patients.component.html
+++ b/src/app/patients/patients.component.html
@@ -1,6 +1,18 @@
 <mat-card class="Patients">
   <mat-card-content>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #filter placeholder="Suchen...">
+      </mat-input-container>
+    </div>
+
     <mat-table #table [dataSource]="dataSource">
+      <mat-header-row *matHeaderRowDef="['familyNameCol', 'givenNamesCol', 'birthDateCol','addressLinesCol','addressCityCol']">
+      </mat-header-row>
+      <mat-row *matRowDef="let row; columns: ['familyNameCol', 'givenNamesCol', 'birthDateCol','addressLinesCol','addressCityCol']"
+        (click)="selectRow(row)"></mat-row>
+
       <ng-container matColumnDef="familyNameCol">
         <mat-header-cell *matHeaderCellDef>Family</mat-header-cell>
         <mat-cell *matCellDef="let entry">{{ getPatientFamilyName(entry) }}</mat-cell>
@@ -14,17 +26,24 @@
         <mat-cell *matCellDef="let entry">{{ getPatientBirthDate(entry) }}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="addressLinesCol">
-          <mat-header-cell *matHeaderCellDef>Street</mat-header-cell>
-          <mat-cell *matCellDef="let entry">{{ getPatientAddressLines(entry) }}</mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="addressCityCol">
-            <mat-header-cell *matHeaderCellDef>City</mat-header-cell>
-            <mat-cell *matCellDef="let entry">{{ getPatientAddressCity(entry) }}</mat-cell>
-          </ng-container>
-            <mat-header-row *matHeaderRowDef="['familyNameCol', 'givenNamesCol', 'birthDateCol','addressLinesCol','addressCityCol']"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: ['familyNameCol', 'givenNamesCol', 'birthDateCol','addressLinesCol','addressCityCol']"></mat-row>
+        <mat-header-cell *matHeaderCellDef>Street</mat-header-cell>
+        <mat-cell *matCellDef="let entry">{{ getPatientAddressLines(entry) }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="addressCityCol">
+        <mat-header-cell *matHeaderCellDef>City</mat-header-cell>
+        <mat-cell *matCellDef="let entry">{{ getPatientAddressCity(entry) }}</mat-cell>
+      </ng-container>
+
     </mat-table>
-    <mat-paginator [length]="length" [pageSize]="size" [pageSizeOptions]="pageSizeOptions" (page)="goToPage($event)"></mat-paginator>
+
+
+    <!--<mat-table #table [dataSource]="dataSource">
+
+      <mat-header-row *matHeaderRowDef="['familyNameCol', 'givenNamesCol', 'birthDateCol','addressLinesCol','addressCityCol']"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: ['familyNameCol', 'givenNamesCol', 'birthDateCol','addressLinesCol','addressCityCol']"></mat-row>
+    </mat-table>-->
+    <mat-paginator [length]="length" [pageSize]="size" [pageSizeOptions]="pageSizeOptions" (page)="goToPage($event)">
+    </mat-paginator>
   </mat-card-content>
   <button mat-menu-item routerLink="/">
     <span>Home</span>
