--- a/src/app/capability-statement/capability-statement.component.html
+++ b/src/app/capability-statement/capability-statement.component.html
@@ -1,5 +1,10 @@
 <mat-card>
   <mat-card-content>
-      <pre>{{bundle | json}}</pre>
+    <pre>{{bundle | json}}</pre>
   </mat-card-content>
+
+  <button mat-menu-item routerLink="/">
+    <span>Home</span>
+  </button>
+
 </mat-card>
