--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,39 @@
 <!doctype html>
 
-<div>
-    <meta charset="utf-8">
-    <title>PoCORF</title>
-</div>
+<mat-card class="mat-caption">
+    <mat-card-subtitle>
+        Beschreibung
+    </mat-card-subtitle>
 
-<br>
-<br>
+    <mat-card-content>
 
-<div>
 
-    <mat-card class="mat-caption">
-        <mat-card-title>Impressum</mat-card-title>
-        <mat-card-footer>
-            <ul>
-                <li>built with
-                    <a href="https://angular.io/">angular</a>
-                </li>
-                <li>using
-                    <a href="https://github.com/ahdis/ng-fhirjs">ng-fhirjs</a> as an adapter for accessing a fhir server with
-                    <a href="https://github.com/FHIR/fhir.js">fhir.js</a>
-                </li>
-                <li>integrating fhir type definitions from
-                    <a href="https://github.com/DefinitelyTyped/DefinitelyTyped/tree/master/types/fhir">DefinitelyTyped</a>) (ST3)</li>
-                <li>using
-                    <a href="https://material.angular.io/">angular material</a> for UI components</li>
-            </ul>
-            <p>use the menu top right for different functionalities</p>
-            <p>brought to you by
-                <a href="http://www.ahdis.ch">ahdis</a>, contact
-                <a href="mail-to:oliver.egger@ahdis.ch">oliver</a> for further info.</p>
-            <p>HL7®, HEALTH LEVEL SEVEN®, FHIR® and the FHIR ® are trademarks owned by Health Level Seven International, registered
-                with the United States Patent and Trademark Office. </p>
-        </mat-card-footer>
-    </mat-card>
+    </mat-card-content>
 
-</div>
+
+</mat-card>
+
+<mat-card class="mat-caption">
+    <mat-card-subtitle>Impressum</mat-card-subtitle>
+    <mat-card-footer>
+        <ul>
+            <li>built with
+                <a href="https://angular.io/">angular</a>
+            </li>
+            <li>using
+                <a href="https://github.com/ahdis/ng-fhirjs">ng-fhirjs</a> as an adapter for accessing a fhir server with
+                <a href="https://github.com/FHIR/fhir.js">fhir.js</a>
+            </li>
+            <li>integrating fhir type definitions from
+                <a href="https://github.com/DefinitelyTyped/DefinitelyTyped/tree/master/types/fhir">DefinitelyTyped</a>) (ST3)</li>
+            <li>using
+                <a href="https://material.angular.io/">angular material</a> for UI components</li>
+        </ul>
+        <p>use the menu top right for different functionalities</p>
+        <p>brought to you by
+            <a href="http://www.ahdis.ch">ahdis</a>, contact
+            <a href="mail-to:oliver.egger@ahdis.ch">oliver</a> for further info.</p>
+        <p>HL7®, HEALTH LEVEL SEVEN®, FHIR® and the FHIR ® are trademarks owned by Health Level Seven International, registered
+            with the United States Patent and Trademark Office. </p>
+    </mat-card-footer>
+</mat-card>
