--- a/src/app/patients/patient-detail/patient-detail.component.html
+++ b/src/app/patients/patient-detail/patient-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="patient">
-  <h2>{{ patient.name | uppercase }} Details</h2>
+  <h5>{{ patient.name | uppercase }} Selected Patient</h5>
   <div>
     <span>id: </span>{{patient.id}}</div>
   <div>
