work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,8 +57,8 @@
   <a class="mat-raised-button" routerLink="/patients-list" routerLinkActive="active">Patients</a>
   <a class="mat-raised-button" routerLink="/patients" routerLinkActive="active">My Patients</a>
   <!--<a class="mat-raised-button" mat-fabrouterLink="/patient-detail" routerLinkActive="active">Patient</a>-->
-  <a class="mat-raised-button" routerLink="/questionnaires" routerLinkActive="active">Questionnaires</a>
-  <a class="mat-raised-button" routerLink="/dynamic-form-question" routerLinkActive="active">Dynamic Form</a>
+  <a class="mat-raised-button" routerLink="/questionnaires-list" routerLinkActive="active">Questionnaires List</a>
+  <a class="mat-raised-button" routerLink="/questionnaire-load" routerLinkActive="active">Selected Questionnaire</a>
   <a class="mat-raised-button" routerLink="/capabilityStatement" routerLinkActive="active">CapabilityStatement</a>
   <a class="mat-raised-button" routerLink="/settings" routerLinkActive="active">Settings</a>
 </nav>
