Patched POC-Fixes

--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -3,7 +3,7 @@
 
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="_id Search Parameter">
+        <input matInput #filter_id placeholder="_id Search Parameter">
       </mat-input-container>
     </div>
 
