--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
         <span>Patient</span>
       </button>
 
-      <button mat-menu-item routerLink="/questionnaires">
+      <button mat-menu-item routerLink="/questionnaires-list">
         <mat-icon>info</mat-icon>
         <span>Questionnaires</span>
       </button>
@@ -51,16 +51,4 @@
 </mat-toolbar>
 <div class="mat-typography">
 </div>
-
-
-<nav>
-  <a class="mat-raised-button" routerLink="/patients-list" routerLinkActive="active">Patients</a>
-  <a class="mat-raised-button" routerLink="/patients" routerLinkActive="active">My Patients</a>
-  <!--<a class="mat-raised-button" mat-fabrouterLink="/patient-detail" routerLinkActive="active">Patient</a>-->
-  <a class="mat-raised-button" routerLink="/questionnaires-list" routerLinkActive="active">Questionnaires List</a>
-  <a class="mat-raised-button" routerLink="/questionnaire-load" routerLinkActive="active">Selected Questionnaire</a>
-  <a class="mat-raised-button" routerLink="/capabilityStatement" routerLinkActive="active">CapabilityStatement</a>
-  <a class="mat-raised-button" routerLink="/settings" routerLinkActive="active">Settings</a>
-</nav>
-
 <router-outlet></router-outlet>
