work in progress

--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -3,38 +3,38 @@
 
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter_id placeholder="_id Search Parameter">
+        <input matInput #id placeholder="_id Search Parameter">
       </mat-input-container>
     </div>
 
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="code Search Parameter">
+        <input matInput #code placeholder="code Search Parameter">
       </mat-input-container>
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="identifier Search Parameter">
+        <input matInput #identifier placeholder="identifier Search Parameter">
       </mat-input-container>
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="publisher Search Parameter">
+        <input matInput #publisher placeholder="publisher Search Parameter">
       </mat-input-container>
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="status Search Parameter">
+        <input matInput #status placeholder="status Search Parameter">
       </mat-input-container>
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="title Search Parameter">
+        <input matInput #title placeholder="title Search Parameter">
       </mat-input-container>
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #filter placeholder="version Search Parameter">
+        <input matInput #version placeholder="version Search Parameter">
       </mat-input-container>
     </div>
 
