--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
 
       <button mat-menu-item routerLink="/patients-list">
         <mat-icon>people</mat-icon>
-        <span>Patients list</span>
+        <span>Patients</span>
       </button>
 
       <button mat-menu-item routerLink="/patients">
