work in progress

--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -3,9 +3,9 @@
     <div *ngFor="let question of questions">
       <app-question [question]="question" [form]="form"></app-question>
     </div>
-    <!-- <div>
+    <div>
       <button type="submit" [disabled]="!form.valid">Save</button>
-    </div> -->
+    </div>
   </form>
 
   <!-- TODO TMP -->
@@ -14,9 +14,6 @@
   <pre>{{ form.value | json }}</pre>
   <strong>Form is valid:</strong> {{form.valid}}
 </div>
-
-
-
 
 <div *ngIf="payLoad" class="form-row">
   <strong>Saved the following values</strong>
