--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <mat-card class="mat-caption">
     <mat-card-subtitle>
-        Beschreibung
+        Description
     </mat-card-subtitle>
 
     <mat-card-content>
