--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -14,6 +14,11 @@
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
+        <input matInput #url placeholder="url Search Parameter">
+      </mat-input-container>
+    </div>
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
         <input matInput #identifier placeholder="identifier Search Parameter">
       </mat-input-container>
     </div>
@@ -29,12 +34,22 @@
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
+        <input matInput #name placeholder="name Search Parameter">
+      </mat-input-container>
+    </div>
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
         <input matInput #title placeholder="title Search Parameter">
       </mat-input-container>
     </div>
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
         <input matInput #version placeholder="version Search Parameter">
+      </mat-input-container>
+    </div>
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #date placeholder="date Search Parameter">
       </mat-input-container>
     </div>
 
