--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -1,5 +1,77 @@
-<mat-card class="Questionnaires">
+<mat-card class="Questionnaires" (keyup.enter)="doSearch()">
   <mat-card-content>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #language placeholder="_language Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #date placeholder="date Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #identifier placeholder="identifier Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #code placeholder="code Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #jurisdiction placeholder="jurisdiction Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #description placeholder="description Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #title placeholder="title Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #version placeholder="version Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #url placeholder="url Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #effective placeholder="effective Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #name placeholder="name Search Parameter">
+      </mat-input-container>
+    </div>
+
+    <div class="searchPanel">
+      <mat-input-container floatPlaceholder="never">
+        <input matInput #publisher placeholder="publisher Search Parameter">
+      </mat-input-container>
+    </div>
 
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
@@ -9,47 +81,7 @@
 
     <div class="searchPanel">
       <mat-input-container floatPlaceholder="never">
-        <input matInput #code placeholder="code Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #url placeholder="url Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #identifier placeholder="identifier Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #publisher placeholder="publisher Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
         <input matInput #status placeholder="status Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #name placeholder="name Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #title placeholder="title Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #version placeholder="version Search Parameter">
-      </mat-input-container>
-    </div>
-    <div class="searchPanel">
-      <mat-input-container floatPlaceholder="never">
-        <input matInput #date placeholder="date Search Parameter">
       </mat-input-container>
     </div>
 
