work in progress

--- a/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
+++ b/src/app/questionnaires/questionnaires-list/questionnaires-list.component.html
@@ -108,7 +108,7 @@
   </button>
 
   <button mat-raised-button (click)="doSearch()">
-    <span>Search</span>
+    <span>Query Questionnaire</span>
   </button>
 
 </mat-card>
