--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -4,7 +4,7 @@
       <app-question [question]="question" [form]="form"></app-question>
     </div>
     <div>
-      <button type="submit" [disabled]="!form.valid">Save</button>
+      <button type="submit" [disabled]="!form.valid">Submit</button>
     </div>
   </form>
 
@@ -16,6 +16,6 @@
 </div>
 
 <div *ngIf="payLoad" class="form-row">
-  <strong>Saved the following values</strong>
+  <strong>Submitted the following values</strong>
   <br>{{payLoad}}
 </div>
